# project-hub

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  vite.config.ts
docs/adr/: 0001-pull-with-rebase.md  0002-batch-refresh-perf.md  0003-single-ops-and-stat-cell-colors.md  0004-project-detail-and-run.md  0005-cache-and-sort.md  0006-multi-terminal-support.md
docs/agents/: domain.md
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gh_integration.rs  git_engine.rs  main.rs  models.rs
src-tauri/src/commands/: git.rs  issues.rs  mod.rs  project_run.rs  projects.rs  settings.rs
src/components/: AddProjectDialog.tsx  CommitsDialog.tsx  DirtyFilesDialog.tsx  IssuesDialog.tsx  OperationContext.tsx  ProjectCard.tsx  SettingsDialog.tsx
src/components/ui/: card.tsx  dialog.tsx  toast.tsx
src/hooks/: use-toast.ts
src/lib/: gh.ts  git-ops.ts  git.ts  operations.ts  projects.ts
src/pages/: ProjectDetailPage.tsx  projects.tsx
